<resources>
    <string name="app_name">单选按钮和复选按钮</string>
    <string name="choose01">请选择你的性别：</string>
    <string name="choose02">请选出不属于四大洋的选项：</string>
    <string name="btnResult">请选择</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="Pacific">太平洋</string>
    <string name="Atlantic">大西洋</string>
    <string name="Xyy">喜洋洋</string>
    <string name="IndianOcean">印度洋</string>
    <string name="Sun">小太阳</string>
    <string name="Arctic">北冰洋</string>
</resources>
